# cmake-template-multi-executable

./: .gitignore  CMakeLists.txt  README.md  compile_run_with_conan.sh  conanfile.txt
00_hello_world/: main.cpp
00_hello_world/src/: main.cpp
cmake/: clang_tidy.cmake  cppcheck.cmake  dependencies.cmake
